1.Containers-VMs/1.3.Kubernetes/pod-nginx.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
spec:
  containers:
  - image: nginx:1.16
    name: nginx
    ports:
    - containerPort: 80
