1.Containers-VMs/1.3.Kubernetes/NEW_first_pod.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app:
  name: servicenpm
spec:
  ports:
    - port: 9871
      targetPort: 3000
  selector:
    app: nginx-flask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-flask
  labels:
    app: nginx-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-flask
  template:
    metadata:
      labels:
        app: nginx-flask
    spec:
      containers:
      - name: nginx-flask
        image: johnnybravo6/testnpm:master
        ports:
        - containerPort: 3000
